[project]
name = "nodetide"
version = "0.1.0"
description = "Distributed identity and messaging system for delay-tolerant networks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nodetide contributors"}
]
keywords = ["identity", "messaging", "dtn", "distributed", "sigchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cryptography>=41.0",
    "pynacl>=1.5",
    "zeroconf>=0.80",
    "click>=8.0",
    "aiosqlite>=0.19",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "casbin>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
nodetide = "nodetide.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodetide"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
